@@ -13,6 +13,7 @@
         <DpiAware Value="Per-monitor"/>
       </XPManifest>
       <Icon Value="0"/>
+      <ActiveWindowIndexAtStart Value="1"/>
     </General>
     <i18n>
       <EnableI18N Value="True"/>
@@ -200,20 +201,18 @@
       <Unit0>
         <Filename Value="winst64.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="9"/>
         <CursorPos X="43" Y="17"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="packdefs.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="5"/>
         <CursorPos X="13" Y="12"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit1>
       <Unit2>
@@ -344,7 +343,7 @@
         <ComponentName Value="DialogServicePassword"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="45"/>
         <CursorPos X="38" Y="65"/>
         <UsageCount Value="200"/>
@@ -391,7 +390,7 @@
         <ComponentName Value="CentralForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="841"/>
         <CursorPos X="39" Y="860"/>
         <UsageCount Value="200"/>
@@ -464,7 +463,8 @@
         <Filename Value="changelog.txt"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="89" Y="19"/>
+        <TopLine Value="13"/>
+        <CursorPos X="51" Y="21"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -543,7 +543,7 @@
       </Unit37>
       <Unit38>
         <Filename Value="osfunclin.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="203"/>
         <CursorPos X="10" Y="228"/>
         <UsageCount Value="204"/>
@@ -569,13 +569,13 @@
       <Unit41>
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="1010"/>
-        <CursorPos Y="1029"/>
+        <TopLine Value="2655"/>
+        <CursorPos X="26" Y="2655"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <TopLine Value="2654"/>
-          <CursorPos X="26" Y="2655"/>
+          <EditorIndex Value="8"/>
+          <TopLine Value="1010"/>
+          <CursorPos Y="1029"/>
         </ExtraEditor1>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
@@ -603,8 +603,8 @@
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="16876"/>
-        <CursorPos X="25" Y="16876"/>
+        <TopLine Value="20693"/>
+        <CursorPos X="33" Y="20714"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -657,7 +657,7 @@
       <Unit51>
         <Filename Value="osconf.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="73"/>
         <CursorPos X="23" Y="86"/>
         <UsageCount Value="205"/>
@@ -674,7 +674,7 @@
       <Unit53>
         <Filename Value="osmain.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="1848"/>
         <CursorPos Y="1867"/>
         <UsageCount Value="204"/>
@@ -764,7 +764,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="95"/>
+        <UsageCount Value="97"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit65>
       <Unit66>
@@ -774,7 +774,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit66>
       <Unit67>
@@ -783,7 +783,7 @@
         <EditorIndex Value="3"/>
         <TopLine Value="8"/>
         <CursorPos X="14" Y="16"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit67>
@@ -794,7 +794,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit68>
       <Unit69>
@@ -804,26 +804,26 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit69>
       <Unit70>
         <Filename Value="..\common\oslog.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="1347"/>
         <CursorPos X="9" Y="241"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit70>
       <Unit71>
         <Filename Value="..\common\oswebservice.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="2816"/>
         <CursorPos X="30" Y="2823"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit71>
@@ -834,7 +834,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit72>
       <Unit73>
@@ -844,7 +844,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit73>
       <Unit74>
@@ -854,7 +854,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
       <Unit75>
@@ -863,16 +863,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="430"/>
         <CursorPos Y="472"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit75>
       <Unit76>
         <Filename Value="osregistry.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="96"/>
         <CursorPos X="22" Y="103"/>
-        <UsageCount Value="91"/>
+        <UsageCount Value="93"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit76>
@@ -893,7 +893,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="7"/>
         <CursorPos X="58" Y="42"/>
-        <UsageCount Value="86"/>
+        <UsageCount Value="88"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit78>
       <Unit79>
@@ -903,7 +903,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="40"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit79>
       <Unit80>
@@ -913,7 +913,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="31"/>
+        <UsageCount Value="33"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit80>
       <Unit81>
@@ -929,128 +929,132 @@
         <EditorIndex Value="4"/>
         <TopLine Value="1796"/>
         <CursorPos X="12" Y="1808"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="12"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit82>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10083" Column="62" TopLine="10069"/>
-      </Position1>
-      <Position2>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10580" Column="53" TopLine="10558"/>
-      </Position2>
-      <Position3>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10394" Column="59" TopLine="10373"/>
-      </Position3>
-      <Position4>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="12312" Column="14" TopLine="12312"/>
-      </Position4>
-      <Position5>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10163" Column="37" TopLine="10157"/>
-      </Position5>
-      <Position6>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="16875" Column="56" TopLine="16861"/>
-      </Position6>
-      <Position7>
-        <Filename Value="changelog.txt"/>
-        <Caret Line="10" Column="10" TopLine="4"/>
-      </Position7>
-      <Position8>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="251" Column="48" TopLine="235"/>
-      </Position8>
-      <Position9>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2025" Column="84" TopLine="2006"/>
-      </Position9>
-      <Position10>
-        <Filename Value="osconf.pas"/>
-        <Caret Line="189" Column="20" TopLine="176"/>
-      </Position10>
-      <Position11>
-        <Filename Value="osconf.pas"/>
-        <Caret Line="52" Column="10" TopLine="32"/>
-      </Position11>
-      <Position12>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2429" Column="24" TopLine="2413"/>
-      </Position12>
-      <Position13>
-        <Filename Value="changelog.txt"/>
-        <Caret Line="13" Column="13"/>
-      </Position13>
-      <Position14>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="38" Column="3" TopLine="18"/>
-      </Position14>
-      <Position15>
-        <Filename Value="..\common\osencoding.pas"/>
-        <Caret Line="20" Column="27" TopLine="8"/>
-      </Position15>
-      <Position16>
-        <Filename Value="..\external_libraries\indy\Lib\Protocols\IdHTTP.pas"/>
-        <Caret Line="1775" Column="56" TopLine="1762"/>
-      </Position16>
-      <Position17>
-        <Filename Value="osservicepassdlg.pas"/>
-        <Caret Line="23" Column="29" TopLine="12"/>
-      </Position17>
-      <Position18>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1908" Column="20" TopLine="1889"/>
-      </Position18>
-      <Position19>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1930" Column="22" TopLine="1911"/>
-      </Position19>
-      <Position20>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="2000" Column="20" TopLine="1981"/>
-      </Position20>
-      <Position21>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1889" Column="56" TopLine="1875"/>
-      </Position21>
-      <Position22>
-        <Filename Value="..\external_libraries\indy\Lib\Protocols\IdHTTP.pas"/>
-        <Caret Line="1808" Column="12" TopLine="1796"/>
-      </Position22>
-      <Position23>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1859" Column="19" TopLine="1848"/>
-      </Position23>
-      <Position24>
         <Filename Value="osmain.pas"/>
         <Caret Line="1856" Column="53" TopLine="1848"/>
-      </Position24>
-      <Position25>
+      </Position1>
+      <Position2>
         <Filename Value="..\common\oswebservice.pas"/>
         <Caret Line="2835" TopLine="2815"/>
-      </Position25>
-      <Position26>
+      </Position2>
+      <Position3>
         <Filename Value="osfunc.pas"/>
         <Caret Line="1039" Column="55" TopLine="1009"/>
-      </Position26>
-      <Position27>
+      </Position3>
+      <Position4>
         <Filename Value="osfunc.pas"/>
         <Caret Line="1029" TopLine="1010"/>
-      </Position27>
-      <Position28>
+      </Position4>
+      <Position5>
         <Filename Value="osmain.pas"/>
         <Caret Line="560" Column="43" TopLine="550"/>
-      </Position28>
-      <Position29>
+      </Position5>
+      <Position6>
         <Filename Value="osmain.pas"/>
         <Caret Line="1867" TopLine="1848"/>
+      </Position6>
+      <Position7>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="16876" Column="25" TopLine="16876"/>
+      </Position7>
+      <Position8>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1969" Column="31" TopLine="1958"/>
+      </Position8>
+      <Position9>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17670" Column="24" TopLine="17655"/>
+      </Position9>
+      <Position10>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17765" Column="45" TopLine="17745"/>
+      </Position10>
+      <Position11>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1943" Column="25" TopLine="1917"/>
+      </Position11>
+      <Position12>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="417" Column="35" TopLine="402"/>
+      </Position12>
+      <Position13>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1943" Column="25" TopLine="1915"/>
+      </Position13>
+      <Position14>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18222" Column="58" TopLine="18194"/>
+      </Position14>
+      <Position15>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18333" Column="56" TopLine="18311"/>
+      </Position15>
+      <Position16>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18464" Column="56" TopLine="18436"/>
+      </Position16>
+      <Position17>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="20699" Column="48" TopLine="20698"/>
+      </Position17>
+      <Position18>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18359" Column="94" TopLine="18320"/>
+      </Position18>
+      <Position19>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17670" Column="12" TopLine="17748"/>
+      </Position19>
+      <Position20>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="18252" Column="19" TopLine="18343"/>
+      </Position20>
+      <Position21>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1927" Column="25" TopLine="1971"/>
+      </Position21>
+      <Position22>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17794" Column="68" TopLine="17778"/>
+      </Position22>
+      <Position23>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17692" Column="28" TopLine="17736"/>
+      </Position23>
+      <Position24>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1902" Column="10" TopLine="1890"/>
+      </Position24>
+      <Position25>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17670" Column="12" TopLine="17743"/>
+      </Position25>
+      <Position26>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="17765" Column="23" TopLine="17744"/>
+      </Position26>
+      <Position27>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="1943" Column="25" TopLine="1926"/>
+      </Position27>
+      <Position28>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="417" Column="13" TopLine="401"/>
+      </Position28>
+      <Position29>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="20703" Column="107" TopLine="120"/>
       </Position29>
+      <Position30>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="418" Column="104" TopLine="402"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
